--- a/Munter/engineerinfo.html
+++ b/Munter/engineerinfo.html
@@ -35,12 +35,12 @@
     ======================================================= -->
 </head>
 
-<body data-spy="scroll" data-offset="58" data-target="#navigation">
+<body data-spy="scroll" data-offset="58" data-target="#navigation" style="background-image: url(./img/body-bg.png)">
 
 <!-- Fixed navbar -->
-<div id="navigation" class="navbar navbar-fixed-top" style="background-color: black">
+<div id="navigation" class="navbar" style="background: #0E2547;height: 130px">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="fa fa-bars"></i>
             </button>
@@ -48,10 +48,10 @@
         <div><img src="img/logo.png"></div>
         <div class="navbar-collapse collapse pull-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html" target="_self">首页</a></li>
+                <li><a href="index.html" target="_self">首页</a></li>
                 <li><a href="new.html" target="_self">公司新闻</a></li>
                 <li><a href="brand_story.html" target="_self">品牌故事</a></li>
-                <li><a href="engineerinfo.html" target="_self">工程概要</a></li>
+                <li class="active"><a href="engineerinfo.html" target="_self">工程概要</a></li>
                 <li><a href="about.html" target="_self">关于我们</a></li>
                 <li><a href="about.html#join" target="_self">加入我们</a></li>
                 <!--<li><a href="#contact" class="smoothscroll">联系我们</a></li>-->
@@ -60,41 +60,201 @@
         </div>
     </div>
     <!--/.nav-collapse -->
+
+
 </div>
 
 
 <!-- === MAIN Background === -->
 <!-- === Slide 4 - Process === -->
 
-<div class="slide story" id="process" data-slide="3">
+<!--<div class="slide story" id="engineerinfo" data-slide="3" style="background-image: url(./img/body-bg.png)">-->
+<!--</br>-->
+<!--</br>-->
+<!--</br>-->
+<!--<div class="container">-->
 
-    <div class="container">
-        <h5 class="page-header "></h5>
 
-        <div class="row">
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/brand1.png"><img class="thumb" src="img/brand1.png" alt=""></a></div>
+<!--<div class="row">-->
 
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p03-large.jpg"><img class="thumb" src="img/portfolio/p03-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p04-large.jpg"><img class="thumb" src="img/portfolio/p04-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p11-large.jpg"><img class="thumb" src="img/portfolio/p11-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p11-large.jpg"><img class="thumb" src="img/portfolio/p11-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>
+<!--<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p04-large.jpg"><img class="thumb" src="img/portfolio/p04-small.jpg" alt=""></a></div>-->
+<!--<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p11-large.jpg"><img class="thumb" src="img/portfolio/p11-small.jpg" alt=""></a></div>-->
+<!--<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>-->
+<!--<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p11-large.jpg"><img class="thumb" src="img/portfolio/p11-small.jpg" alt=""></a></div>-->
+<!--<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>-->
+<!--<div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>-->
 
-        </div>
-        <!-- /row -->
-    </div>
-    <!-- /slide3 -->
+<!--</div>-->
+<!--&lt;!&ndash; /row &ndash;&gt;-->
+<!--</div>-->
+<!-- /slide3 -->
 
-</div>
+
+<!--<div class="col-md-12 column">-->
+<!--<div class="carousel slide" id="carousel-544471">-->
+<!--<ol class="carousel-indicators">-->
+<!--<li class="active" data-slide-to="0" data-target="#carousel-544471">-->
+<!--</li>-->
+<!--<li data-slide-to="1" data-target="#carousel-544471">-->
+<!--</li>-->
+<!--<li data-slide-to="2" data-target="#carousel-544471">-->
+<!--</li>-->
+<!--</ol>-->
+<!--<div class="carousel-inner">-->
+<!--<div class="item active" style="padding: auto">-->
+<!--<img alt="" src="img/bg1.jpg" style="width: 100%;width: 100%;padding: auto"/>-->
+<!--&lt;!&ndash;<div class="carousel-caption" style="padding: 50px">&ndash;&gt;-->
+<!--&lt;!&ndash;<h4>&ndash;&gt;-->
+<!--&lt;!&ndash;新闻一&ndash;&gt;-->
+<!--&lt;!&ndash;</h4>&ndash;&gt;-->
+<!--&lt;!&ndash;<p>&ndash;&gt;-->
+<!--&lt;!&ndash;新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一&ndash;&gt;-->
+<!--&lt;!&ndash;</p>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</div>-->
+<!--<div class="item">-->
+<!--<img alt="" src="img/bg1.jpg" style="width: 100%;width: 100%;padding: auto"/>-->
+<!--&lt;!&ndash;<div class="carousel-caption">&ndash;&gt;-->
+<!--&lt;!&ndash;<h3>&ndash;&gt;-->
+<!--&lt;!&ndash;新闻二&ndash;&gt;-->
+<!--&lt;!&ndash;</h3>&ndash;&gt;-->
+<!--&lt;!&ndash;<p>&ndash;&gt;-->
+<!--&lt;!&ndash;新闻一 新闻二 新闻二 新闻二 新闻二 新闻二 新闻二 新闻二 新闻二&ndash;&gt;-->
+<!--&lt;!&ndash;</p>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--<div class="item">-->
+<!--<img alt="" src="img/bg1.jpg" style="width: 100%;width: 100%;padding: auto"/>-->
+<!--&lt;!&ndash;<div class="carousel-caption" style="padding-top: 10px";>&ndash;&gt;-->
+<!--&lt;!&ndash;<h3>&ndash;&gt;-->
+<!--&lt;!&ndash;新闻三&ndash;&gt;-->
+<!--&lt;!&ndash;</h3>&ndash;&gt;-->
+<!--&lt;!&ndash;<p>&ndash;&gt;-->
+<!--&lt;!&ndash;新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三&ndash;&gt;-->
+<!--&lt;!&ndash;</p>&ndash;&gt;-->
+<!--&lt;!&ndash;</div>&ndash;&gt;-->
+<!--</div>-->
+<!--</div>-->
+<!--<a class="left carousel-control" href="#carousel-544471" data-slide="prev"><span-->
+<!--class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control"-->
+<!--href="#carousel-544471"-->
+<!--data-slide="next"><span-->
+<!--class="glyphicon glyphicon-chevron-right"></span></a>-->
+<!--</div>-->
+
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+<!--</div>-->
+
+
 <!-- /slide4 -->
+
+<div class="container" style="padding: 20px">
+    <div class="thumbnail text-center">
+        <h3><a href="./engineers.html">工程标题1</a></h3>
+
+        <div class="row clearfix">
+
+            <div class="col-md-12 column">
+                <div class="carousel slide" id="carousel-321280"
+                     style="background-image: url(./img/body-bg.png);padding: 0px ;">
+                    <ol class="carousel-indicators">
+                        <li class="active" data-slide-to="0" data-target="#carousel-321280">
+                        </li>
+                        <li data-slide-to="1" data-target="#carousel-321280">
+                        </li>
+                        <li data-slide-to="2" data-target="#carousel-321280">
+                        <li data-slide-to="3" data-target="#carousel-321280">
+                        </li>
+                        <li data-slide-to="4" data-target="#carousel-321280">
+                        </li>
+                        </li>
+                    </ol>
+                    <div class="carousel-inner">
+                        <div class="item active">
+                            <a href="engineers.html"> <img alt="" src="./img/bg1.jpg" href="./engineerinfo.html"/></a>
+                            <div class="carousel-caption">
+
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta
+                                    gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+
+                        </div>
+                        <div class="item">
+                            <img alt="" src="./img/bg1.jpg"/>
+                            <div class="carousel-caption">
+                                <h4>
+                                    工程2
+                                </h4>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta
+                                    gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+                        <div class="item">
+                            <img alt="" src="./img/bg1.jpg"/>
+                            <div class="carousel-caption">
+                                <h4>
+                                    工程3
+                                </h4>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta
+                                    gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img alt="" src="./img/bg1.jpg"/>
+                            <div class="carousel-caption">
+                                <h4>
+                                    工程 4
+                                </h4>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta
+                                    gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+
+                        <div class="item">
+                            <img alt="" src="./img/bg1.jpg"/>
+                            <div class="carousel-caption">
+                                <h4>
+                                    工程 5
+                                </h4>
+                                <p>
+                                    Cras justo odio, dapibus ac facilisis in, egestas eget quam. Donec id elit non mi
+                                    porta
+                                    gravida at eget metus. Nullam id dolor id nibh ultricies vehicula ut id elit.
+                                </p>
+                            </div>
+                        </div>
+                    </div>
+                    <a class="left carousel-control" href="#carousel-321280" data-slide="prev"><span
+                            class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control"
+                                                                                    href="#carousel-321280"
+                                                                                    data-slide="next"><span
+                        class="glyphicon glyphicon-chevron-right"></span></a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
 
 
 <div id="copyrights">
     <div class="container">
         <div class="row">
-            <div class="pull-left">
+            <div class="pull-left" style="margin-left: 150px">
 
                 <h3 align="left"><a href="http://www.badiu.com"><span>客户联系：</span></a></h3>
                 <h5 align="left">联系方式：<a><span>&nbsp; 188000000</span></a></h5>
@@ -104,7 +264,7 @@
 
 
             </div>
-            <div class="pull-right">
+            <div class="pull-right" style="margin-right: 150px">
                 <h3 align="left"><img src="img/logo.png"></h3>
                 <h5 align="left"><a href="#"><span>关于我们</span></a></h5>
                 <h5 align="left"><a href="#"><span>联系我们</span></a></h5>
@@ -112,7 +272,7 @@
 
             </div>
         </div>
-        <p>
+        <p style="margin-top: 50px">
             &copy; Copyrights <strong>daliyuan</strong>. All Rights Reserved 2018
         </p>
         <a href="http://www.miitbeian.gov.cn/" style="color:#fff"><span>蜀ICP备XXXX</span></a>
