--- a/Munter/new_2.html
+++ b/Munter/new_2.html
@@ -85,7 +85,7 @@
 <div id="copyrights">
     <div class="container">
         <div class="row">
-            <div class="pull-left">
+            <div class="pull-left" style="margin-left: 150px">
 
                 <h3 align="left"><a href="http://www.badiu.com"><span>客户联系：</span></a></h3>
                 <h5 align="left">联系方式：<a><span>&nbsp; 188000000</span></a></h5>
@@ -95,7 +95,7 @@
 
 
             </div>
-            <div class="pull-right">
+            <div class="pull-right" style="margin-right: 150px">
                 <h3 align="left"><img src="img/logo.png"></h3>
                 <h5 align="left"><a href="#"><span>关于我们</span></a></h5>
                 <h5 align="left"><a href="#"><span>联系我们</span></a></h5>
@@ -103,7 +103,7 @@
 
             </div>
         </div>
-        <p>
+        <p style="margin-top: 50px">
             &copy; Copyrights <strong>daliyuan</strong>. All Rights Reserved 2018
         </p>
         <a href="http://www.miitbeian.gov.cn/" style="color:#fff"><span>蜀ICP备XXXX</span></a>
