--- a/Munter/about.html
+++ b/Munter/about.html
@@ -27,12 +27,12 @@
 
     <link rel="prefetch" href="img/zoom.png">
 </head>
-<body data-spy="scroll" data-offset="58" data-target="#navigation">
+<body data-spy="scroll" data-offset="58" data-target="#navigation" style="background-image: url(./img/body-bg.png)">
 
 <!-- Fixed navbar -->
-<div id="navigation" class="navbar">
+<div id="navigation" class="navbar" style="background: #0E2547;height: 130px">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right" style="position: relative;z-index: 3">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="fa fa-bars"></i>
             </button>
@@ -40,11 +40,11 @@
         <div><img src="img/logo.png"></div>
         <div class="navbar-collapse collapse pull-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html" target="_self">首页</a></li>
+                <li><a href="index.html" target="_self">首页</a></li>
                 <li><a href="new.html" target="_self">公司新闻</a></li>
                 <li><a href="brand_story.html" target="_self">品牌故事</a></li>
                 <li><a href="engineerinfo.html" target="_self">工程概要</a></li>
-                <li><a href="about.html" target="_self">关于我们</a></li>
+                <li class="active"><a href="about.html" target="_self">关于我们</a></li>
                 <li><a href="#join" target="_self" onclick="">加入我们</a></li>
                 <!--<li><a href="#contact" class="smoothscroll">联系我们</a></li>-->
 
@@ -57,9 +57,11 @@
 
 
 <!-- === SLide 3 - 关于我们 -->
-<div class="slide story" id="clients" data-slide="5">
-    <div class="container" style="color: black ">
-        <div class="row clearfix">
+
+<div class="slide story" id="clients" data-slide="5" style="position: relative;z-index: -1">
+    <div class="container">
+
+        <div class="row ">
             <div class="col-md-12 column">
                 <!--<img alt="140x140" src="img/logo.png" class="img-rounded" />-->
                 <div class="jumbotron" style="background-image: url(./img/logo.png)">
@@ -80,47 +82,49 @@
 
 
 </div>
-<div style="background-image: url(./img/body-bg.png)">
-    <div class="container " style="color:black">
+<div class="thumbnail" style="margin: 50px">
+    <div style="background-image: url(./img/body-bg.png)">
+        <div class="container " style="color:black">
 
-        <div class="row">
-            <div class="col-md-4 column">
-                <h3 class="text">
-                    公司简介
-                </h3>
-                <ul class="list-unstyled">
-                    <li>
+            <div class="row">
+                <div class="col-md-4 column">
+                    <h3 class="text">
                         公司简介
-                    </li>
-                    <li>
-                        公司简介t
-                    </li>
-                    <li>
-                        公司简介
-                    </li>
-                    <li>
-                        公司简介
-                    </li>
-                    <li>
-                        公司简介
-                    </li>
-                    <li>
-                        公司简介
-                    </li>
-                    <li>
-                        公司简介
-                    </li>
-                    <li>
-                        公司简介
-                    </li>
-                </ul>
+                    </h3>
+                    <ul class="list-unstyled">
+                        <li>
+                            公司简介
+                        </li>
+                        <li>
+                            公司简介t
+                        </li>
+                        <li>
+                            公司简介
+                        </li>
+                        <li>
+                            公司简介
+                        </li>
+                        <li>
+                            公司简介
+                        </li>
+                        <li>
+                            公司简介
+                        </li>
+                        <li>
+                            公司简介
+                        </li>
+                        <li>
+                            公司简介
+                        </li>
+                    </ul>
+                </div>
             </div>
         </div>
     </div>
-
+</div>
+<div class="thumbnail" style="margin: 50px">
     <div id="shehui" style="background-image: url(./img/body-bg.png)">
         <div class="container" style="color: black">
-            <h5 class="page-header"></h5>
             <div class="row">
                 <div class="col-md-4 column  pull-left">
                     <h3 class="text left">
@@ -160,11 +164,36 @@
             </div>
         </div>
     </div>
-    <!--加入我们-->
+</div>
 
+<!--合作伙伴-->
+<div class="thumbnail" style="margin: 50px">
+    <div id="hezuo" style="background-image: url(./img/body-bg.png)">
+
+        <div class="container">
+            <div class="row clearfix">
+                <div class="col-md-12 column text-center">
+                    <h3 class="text-left">
+                        合作伙伴
+                    </h3><img alt="140x140"
+                              src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
+                              class="img-circle"/><img alt="140x140"
+                                                       src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
+                                                       class="img-circle"/><img alt="140x140"
+                                                                                src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
+                                                                                class="img-circle"/><img alt="140x140"
+                                                                                                         src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
+                                                                                                         class="img-circle"/>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</body>
+<!--加入我们-->
+<div class="thumbnail" style="margin: 50px">
     <div id="about-us" style="background-image: url(./img/body-bg.png)">
-        <div class="container" id="join" style="color: black">
-            <h5 class="page-header "></h5>
+        <div class="container" id="join" style="color: black ">
             <div class="row ">
                 <div class="col-md-4 column ">
                     <h3 class="text left">
@@ -172,9 +201,9 @@
                     </h3>
                     <ul class="list-unstyled">
                         <li>
-                            <div class="row clearfix">
+                            <div class="row clearfix pull-right">
                                 <div class="col-md-12 column">
-                        <li><a id="modal-169753" href="#modal-container-169753" role="button" class="btn"
+                        <li class=""><a id="modal-169753" href="#modal-container-169753" role="button" class="btn"
                                data-toggle="modal">加入我们项目部</a>
 
                             <div class="modal fade" id="modal-container-169753" role="dialog"
@@ -233,34 +262,11 @@
     </div>
 </div>
 
-<!--合作伙伴-->
-
-<div id="hezuo" style="background-image: url(./img/body-bg.png)">
-
-    <div class="container">
-        <h5 class="page-header"></h5>
-        <div class="row clearfix">
-            <div class="col-md-12 column text-center">
-                <h3 class="text-left">
-                    合作伙伴
-                </h3><img alt="140x140" src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
-                          class="img-circle"/><img alt="140x140"
-                                                   src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
-                                                   class="img-circle"/><img alt="140x140"
-                                                                            src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
-                                                                            class="img-circle"/><img alt="140x140"
-                                                                                                     src="http://ibootstrap-file.b0.upaiyun.com/lorempixel.com/140/140/default.jpg"
-                                                                                                     class="img-circle"/>
-            </div>
-        </div>
-    </div>
-</div>
-</div>
 <!--//底端导航-->
-<div id="copyrights">
+<div id="copyrights" style="margin-bottom: 0px">
     <div class="container">
         <div class="row">
-            <div class="pull-left">
+            <div class="pull-left" style="margin-left: 150px">
 
                 <h3 align="left"><a href="http://www.badiu.com"><span>客户联系：</span></a></h3>
                 <h5 align="left">联系方式：<a><span>&nbsp; 188000000</span></a></h5>
@@ -270,7 +276,7 @@
 
 
             </div>
-            <div class="pull-right">
+            <div class="pull-right" style="margin-right: 150px">
                 <h3 align="left"><img src="img/logo.png"></h3>
                 <h5 align="left"><a href="#"><span>关于我们</span></a></h5>
                 <h5 align="left"><a href="#"><span>联系我们</span></a></h5>
@@ -278,7 +284,7 @@
 
             </div>
         </div>
-        <p>
+        <p style="margin-top: 50px">
             &copy; Copyrights <strong>daliyuan</strong>. All Rights Reserved 2018
         </p>
         <a href="http://www.miitbeian.gov.cn/" style="color:#fff"><span>蜀ICP备XXXX</span></a>
