--- a/Munter/brand_story.html
+++ b/Munter/brand_story.html
@@ -26,11 +26,11 @@
 
     <link rel="prefetch" href="img/zoom.png">
 </head>
-<body data-spy="scroll" data-offset="58" data-target="#navigation">
+<body data-spy="scroll" data-offset="58" data-target="#navigation"  style="background-image: url(./img/body-bg.png)">
 <!-- Fixed navbar -->
-<div id="navigation" class="navbar">
+<div id="navigation" class="navbar" style="background: #0E2547;height: 130px">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="fa fa-bars"></i>
             </button>
@@ -38,9 +38,9 @@
         <div ><img src="img/logo.png"></div>
         <div class="navbar-collapse collapse pull-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html" target="_self">首页</a></li>
+                <li><a href="index.html" target="_self">首页</a></li>
                 <li><a href="new.html" target="_self">公司新闻</a></li>
-                <li><a href="brand_story.html" target="_self">品牌故事</a></li>
+                <li class="active"><a href="brand_story.html" target="_self">品牌故事</a></li>
                 <li><a href="engineerinfo.html" target="_self">工程概要</a></li>
                 <li><a href="about.html" target="_self">关于我们</a></li>
                 <li><a href="about.html#join" target="_self">加入我们</a></li>
@@ -54,17 +54,18 @@
 
 
         <!--/.nav-collapse -->
-    <br/>
-
+</br>
+</br>
+</br>
 
 
     <!-- === SLide 3 - 品牌故事 -->
 
     <!-- === SLide 3 - Portfolio -->
-    <div class="slide story" id="portfolio" data-slide="3">
-        <div class="container">
+
+    <div class="slide story" id="portfolio" data-slide="2" >
+        <div class="container" >
         <div class="row">
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/brand1.png"><img class="thumb" src="img/brand1.png" alt=""></a></div>
 
             <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p03-large.jpg"><img class="thumb" src="img/portfolio/p03-small.jpg" alt=""></a></div>
             <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p04-large.jpg"><img class="thumb" src="img/portfolio/p04-small.jpg" alt=""></a></div>
@@ -72,54 +73,57 @@
             <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>
             <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p11-large.jpg"><img class="thumb" src="img/portfolio/p11-small.jpg" alt=""></a></div>
             <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>
-            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt=""></a></div>
+            <div class="col-12 col-sm-6 col-lg-2"><a data-fancybox-group="portfolio" class="fancybox" href="img/portfolio/p12-large.jpg"><img class="thumb" src="img/portfolio/p12-small.jpg" alt="这是一个。。。。"></a></div>
 
         </div>
         <!-- /row -->
     </div>
     <!-- /slide3 -->
-
     </div>
+</br>
+</br>
+</br>
+</br>
 
-//底端导航
+<!--//底端导航-->
 <div id="copyrights">
     <div class="container">
         <div class="row">
-            <div class="pull-left">
+            <div class="pull-left" style="margin-left: 150px">
 
-                <h3 align="left">   <a href="http://www.badiu.com"><span>客户联系：</span></a></h3>
+                <h3 align="left"><a href="http://www.badiu.com"><span>客户联系：</span></a></h3>
                 <h5 align="left">联系方式：<a><span>&nbsp; 188000000</span></a></h5>
                 <h5 align="left">公司邮箱:<a><span>&nbsp;299@qq.com</span></a></h5>
                 <h5 align="left">公司地址：<a><span>&nbsp;四川省成都市高新区XXX</span></a></h5>
                 <h5 align="left"></h5>
 
 
-
             </div>
-            <div class="pull-right">
-                <h3 align="left"> <img src="img/logo.png"></h3>
-                <h5 align="left">  <a href="#" ><span>关于我们</span></a></h5>
-                <h5 align="left">  <a href="#" ><span>联系我们</span></a></h5>
+            <div class="pull-right" style="margin-right: 150px">
+                <h3 align="left"><img src="img/logo.png"></h3>
+                <h5 align="left"><a href="#"><span>关于我们</span></a></h5>
+                <h5 align="left"><a href="#"><span>联系我们</span></a></h5>
 
 
             </div>
         </div>
-        <p>
+        <p style="margin-top: 50px">
             &copy; Copyrights <strong>daliyuan</strong>. All Rights Reserved 2018
         </p>
         <a href="http://www.miitbeian.gov.cn/" style="color:#fff"><span>蜀ICP备XXXX</span></a>
         <div class="row">
             <div class="col-xs-12 col-md-12">
                 <div style="width:300px;margin:0 auto; padding:0;margin-bottom: 1%;">
-                    <a target="_blank" href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002001655" style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
+                    <a target="_blank"
+                       href="http://www.beian.gov.cn/portal/registerSystemInfo?recordcode=51019002001655"
+                       style="display:inline-block;text-decoration:none;height:20px;line-height:20px;">
                         <img src="img/909162807438009012.png" style="float:left;"/>
-                        <p style="line-height:20px;margin: 0px 0px 0px 30px; color:white;">川公网安备 XXXXXXX</p >
+                        <p style="line-height:20px;margin: 0px 0px 0px 30px; color:white;">川公网安备 XXXXXXX</p>
                     </a>
                 </div>
             </div>
 
         </div>
-
 
 
     </div>
