--- a/Munter/new.html
+++ b/Munter/new.html
@@ -26,12 +26,13 @@
     <link href="css/style.css" rel="stylesheet">
 
     <link rel="prefetch" href="img/zoom.png">
+
 </head>
-<body data-spy="scroll" data-offset="58" data-target="#navigation">
+<body data-spy="scroll" data-offset="58" data-target="#navigation" style="background-image: url(./img/body-bg.png)">
 <!-- Fixed navbar -->
-<div id="navigation" class="navbar">
+<div id="navigation" class="navbar" style="background: #0E2547;height: 130px">
     <div class="container">
-        <div class="navbar-header">
+        <div class="navbar-header pull-right">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
                 <i class="fa fa-bars"></i>
             </button>
@@ -39,8 +40,8 @@
         <div><img src="img/logo.png"></div>
         <div class="navbar-collapse collapse pull-right">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="index.html" target="_self">首页</a></li>
-                <li><a href="new.html" target="_self">公司新闻</a></li>
+                <li ><a href="index.html" target="_self">首页</a></li>
+                <li class="active"><a href="new.html" target="_self">公司新闻</a></li>
                 <li><a href="brand_story.html" target="_self">品牌故事</a></li>
                 <li><a href="engineerinfo.html" target="_self">工程概要</a></li>
                 <li><a href="about.html" target="_self">关于我们</a></li>
@@ -54,104 +55,188 @@
 
 
 <!--/.nav-collapse -->
-<br/>
+
 <!--公司新闻-->
-<div class="slide story" id="about-us" data-slide="2">
-    <div class="container">
-        <div class="row title-row">
-            <div class="col-12 font-thin" ><img src="img/909162807438009012.png"><span class="font-semibold">新闻</span>
-
-            </div>
-            <div class="row">
-                <div class="col-sm-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/s01.png"
-                             alt="通用的占位符缩略图">
-                        <div class="caption">
-                            <h3>缩略图标签</h3>
-                            <p>一些示例文本。一些示例文本。</p>
-                            <p>
-                                <a href="#" class="btn btn-primary" role="button">
-                                    阅读
-                                </a>
-
-                            </p>
+<div class="12">
+    <div class="slide story" id="about-us" data-slide="2">
+        <div class="container">
+            <div class="row clearfix" style="padding: 0px">
+                <div class="col-md-12 column" style="background-image: url(./img/body-bg.png);padding: 0px">
+                    <div class="carousel slide" id="carousel-544471"
+                         style="background-image: url(./img/body-bg.png);padding: 0px ;">
+                        <ol class="carousel-indicators">
+                            <li class="active" data-slide-to="0" data-target="#carousel-544471">
+                            </li>
+                            <li data-slide-to="1" data-target="#carousel-544471">
+                            </li>
+                            <li data-slide-to="2" data-target="#carousel-544471">
+                            </li>
+                        </ol>
+                        <div class="carousel-inner">
+                            <div class="item active" style="padding: auto">
+                                <img alt="" src="img/114.jpg" style="width: 100%;width: 100%;padding: auto"/>
+                                <div class="carousel-caption" style="padding: 50px">
+                                    <h4>
+                                        新闻一
+                                    </h4>
+                                    <p>
+                                        新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一新闻一
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/112.jpg"/>
+                                <div class="carousel-caption">
+                                    <h3>
+                                        新闻二
+                                    </h3>
+                                    <p>
+                                        新闻一 新闻二 新闻二 新闻二 新闻二 新闻二 新闻二 新闻二 新闻二
+                                    </p>
+                                </div>
+                            </div>
+                            <div class="item">
+                                <img alt="" src="img/112.jpg"/>
+                                <div class="carousel-caption" style="padding-top: 10px";>
+                                    <h3>
+                                      新闻三
+                                    </h3>
+                                    <p>
+                                        新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三 新闻三
+                                    </p>
+                                </div>
+                            </div>
                         </div>
-                    </a>
+                        <a class="left carousel-control" href="#carousel-544471" data-slide="prev"><span
+                                class="glyphicon glyphicon-chevron-left"></span></a> <a class="right carousel-control"
+                                                                                        href="#carousel-544471"
+                                                                                        data-slide="next"><span
+                            class="glyphicon glyphicon-chevron-right"></span></a>
+                    </div>
 
-                </div>
-
-
-                <div class="col-sm-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/s01.png"
-                             alt="通用的占位符缩略图">
-                        <div class="caption">
-                            <h3>缩略图标签</h3>
-                            <p>一些示例文本。一些示例文本。</p>
-                            <p>
-                                <a href="#" class="btn btn-primary" role="button">
-                                    按钮
-                                </a>
-                                <a href="#" class="btn btn-default" role="button">
-                                    按钮
-                                </a>
-                            </p>
-                        </div>
-                    </a>
-                </div>
-                <div class="col-sm-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/s01.png"
-                             alt="通用的占位符缩略图">
-                        <div class="caption">
-                            <h3>缩略图标签</h3>
-                            <p>一些示例文本。一些示例文本。</p>
-                            <p>
-                                <a href="#" class="btn btn-primary" role="button">
-                                    按钮
-                                </a>
-                                <a href="#" class="btn btn-default" role="button">
-                                    按钮
-                                </a>
-                            </p>
-                        </div>
-                    </a>
-                </div>
-
-                <div class="col-sm-6 col-md-3">
-                    <a href="#" class="thumbnail">
-                        <img src="img/s01.png"
-                             alt="通用的占位符缩略图">
-                        <div class="caption">
-                            <h3>缩略图标签</h3>
-                            <p>一些示例文本。一些示例文本。</p>
-                            <p>
-                                <a href="#" class="btn btn-primary" role="button">
-                                    按钮
-                                </a>
-                                <a href="#" class="btn btn-default" role="button">
-                                    按钮
-                                </a>
-                            </p>
-                        </div>
-                    </a>
                 </div>
             </div>
-
-
-            <!-- /row -->
         </div>
-        <!-- /container -->
+    </div>
+</div>
+<div class="container">
+    <div class="jumbotron">
+
+
+        <div class="pull-left">
+            <img src="img/113.jpg" style="width: 260px;height: 240px;border-bottom: 5px;padding-right: 20px" class="img-rounded ">
+
+        </div>
+        <div class="text-center">
+            <h1>
+                Hello, world!
+            </h1>
+            <h4 class="right">2018-9-10</h4>
+        </div>
+        </br>
+
+        <p style="text-indent: 2em">
+            This is a template for a simple marketing or informational website.
+            It includes a large callout
+            called the hero unit and three supporting pieces of content. ...
+
+        </p>
+        <a class="btn btn-primary btn-large pull-right" href="./new_2.html">更多</a>
+
+
+        <!--</div>-->
+
+    </div>
+    <div class="jumbotron">
+
+
+            <div class="pull-left">
+                <img src="img/113.jpg" style="width: 260px;height: 240px;border-bottom: 5px;padding-right: 20px" class="img-rounded ">
+
+            </div>
+            <div class="text-center">
+                <h1>
+                    Hello, world!
+                </h1>
+                <h4 class="right">2018-9-10</h4>
+            </div>
+            </br>
+
+            <p style="text-indent: 2em">
+                This is a template for a simple marketing or informational website.
+                It includes a large callout
+                called the hero unit and three supporting pieces of content. ...
+            </p>
+            <p>
+                <a class="btn btn-primary btn-large pull-right" href="./new_1.html">更多</a>
+            </p>
+
+
+            <!--</div>-->
+
+        </div>
+    <div class="jumbotron">
+        <div class="pull-left">
+            <img src="img/113.jpg" style="width: 260px;height: 240px;border-bottom: 5px;padding-right: 20px" class="img-rounded ">
+
+        </div>
+        <div class="text-center">
+            <h1>
+                Hello, world!
+            </h1>
+            <h4 class="right">2018-9-10</h4>
+        </div>
+        </br>
+
+        <p style="text-indent: 2em">
+            This is a template for a simple marketing or informational website.
+            It includes a large callout
+            called the hero unit and three supporting pieces of content. ...
+
+        </p>  <a class="btn btn-primary btn-large pull-right" href="#">更多</a>
+
+
+
+        <!--</div>-->
+
+    </div>
+    <div class="row clearfix pull-right">
+        <div class="col-md-12 column">
+            <ul class="pagination">
+                <li>
+                    <a href="#">上一页</a>
+                </li>
+                <li>
+                    <a href="#">1</a>
+                </li>
+                <li>
+                    <a href="#">2</a>
+                </li>
+                <li>
+                    <a href="#">3</a>
+                </li>
+                <li>
+                    <a href="#">4</a>
+                </li>
+                <li>
+                    <a href="#">5</a>
+                </li>
+                <li>
+                    <a href="#">下一页</a>
+                </li>
+            </ul>
+        </div>
     </div>
 </div>
 
 
-//底端导航
+
+
+<!--//底端导航-->
 <div id="copyrights">
     <div class="container">
         <div class="row">
-            <div class="pull-left">
+            <div class="pull-left" style="margin-left: 150px">
 
                 <h3 align="left"><a href="http://www.badiu.com"><span>客户联系：</span></a></h3>
                 <h5 align="left">联系方式：<a><span>&nbsp; 188000000</span></a></h5>
@@ -161,7 +246,7 @@
 
 
             </div>
-            <div class="pull-right">
+            <div class="pull-right" style="margin-right: 150px">
                 <h3 align="left"><img src="img/logo.png"></h3>
                 <h5 align="left"><a href="#"><span>关于我们</span></a></h5>
                 <h5 align="left"><a href="#"><span>联系我们</span></a></h5>
@@ -169,7 +254,7 @@
 
             </div>
         </div>
-        <p>
+        <p style="margin-top: 50px">
             &copy; Copyrights <strong>daliyuan</strong>. All Rights Reserved 2018
         </p>
         <a href="http://www.miitbeian.gov.cn/" style="color:#fff"><span>蜀ICP备XXXX</span></a>
@@ -190,7 +275,6 @@
 
     </div>
 </div>
-
 
 <script src="lib/jquery/jquery.min.js"></script>
 <script src="lib/bootstrap/js/bootstrap.min.js"></script>
